--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ MONGIDB_URI = mongodb+srv://manh20051151:123@zalo.c7tfrem.mongodb.net/?retryWrit
 JWT_SECRET = congnghemoi
 EMAIL_APP_PASSWORD = rxizbukfqrjfgkeq
 EMAIL_NAME = nguyenvietmanh1409@gmail.com
-URL_SERVER = http://localhost:5000
-CLIENT_URL = http://localhost:3000
+URL_SERVER = http://manh20051151.github.io/test/api
+CLIENT_URL = https://manh20051151.github.io/client_deploy
 
 
 ACCESS_KEY_ID=AKIAWWGQZQ4KEJWW3MEE
