--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon server.js",
-    "start": "node server.js"
+    "start": "node server.js",
+    "predeploy": "npm run start",
+    "deploy": "gh-pages -d start"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +23,7 @@
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
     "file-type": "^16.5.4",
+    "gh-pages": "^6.1.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.4",
     "multer": "^1.4.5-lts.1",
@@ -30,5 +33,6 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
-  }
+  },
+  "homepage": "http://manh20051151.github.io/test"
 }
