--- a/.env
+++ b/.env
@@ -3,8 +3,8 @@ MONGIDB_URI = mongodb+srv://manh20051151:123@zalo.c7tfrem.mongodb.net/?retryWrit
 JWT_SECRET = congnghemoi
 EMAIL_APP_PASSWORD = rxizbukfqrjfgkeq
 EMAIL_NAME = nguyenvietmanh1409@gmail.com
-URL_SERVER = http://manh20051151.github.io/test/api
-CLIENT_URL = https://manh20051151.github.io/client_deploy
+URL_SERVER = http://ec2-13-215-193-21.ap-southeast-1.compute.amazonaws.com:5000
+CLIENT_URL = http://ec2-13-215-193-21.ap-southeast-1.compute.amazonaws.com:3000
 
 
 ACCESS_KEY_ID=AKIAWWGQZQ4KEJWW3MEE
