--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT = 5000
-MONGIDB_URI = mongosh "mongodb+srv://zalo.c7tfrem.mongodb.net/" --apiVersion 1 --username manh20051151
+MONGIDB_URI = mongodb+srv://manh20051151:123@zalo.c7tfrem.mongodb.net/?retryWrites=true&w=majority&appName=zalo
 JWT_SECRET = congnghemoi
 EMAIL_APP_PASSWORD = rxizbukfqrjfgkeq
 EMAIL_NAME = nguyenvietmanh1409@gmail.com
